# sdjquiz

./: README.md  pyproject.toml
samples/: quiz_python.yaml  quizz_python.yaml
sdjquiz/: controller.py  exceptions.py  helpers.py  main.py  model.py  vue.py
sdjquiz/controller/: abstract_controller.py  basic_tui_controller.py
sdjquiz/vue/: abstract_vue.py  basic_tui_vue.py
sdjquizz/components/: question.py  quizz.py
