[tool.poetry]
name = "sdjquiz"
version = "0.2.2"
description = ""
authors = ["Steve De Jongh <sdejongh@he2b.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
rich = "^13.4.2"

[tool.poetry.scripts]
sdjquiz = "sdjquiz.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
